# Livabl

./: .gitignore  README.md
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
backend/: README.md  pyproject.toml  run.py
backend/app/: config.py  db.py  main.py
backend/app/api/: compare.py  wards.py
backend/app/data/: aqi_cache.py  aqi_config.py  ingestion.py  processing.py  realtime_aqi.py  schemas.py  wards.py
backend/app/schemas/: ward.py
backend/app/scoring/: engine.py  metrics.py  score.py
backend/data/processed/: aqi_stations.geojson  wards_clean.geojson  wards_score.geojson  wards_with_aqi.geojson  wards_with_hospital_score.geojson  wards_with_school_score.geojson
backend/data/raw/: hospitals.geojson
backend/scripts/: aggregate_ward_aqi.py  compute_hospital_access.py  compute_school_access.py  compute_score.py  fetch_aqi.py  fetch_hospitals.py  fetch_schools.py  load_wards_to_db.py  process_wards.py
backend/src/queries/: wards.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css  utils.ts
frontend/src/api/: neighborhoods.ts  overpass.ts  wards.ts
frontend/src/components/: Header.tsx  LiveMap.tsx  MapPanel.tsx  ScoreBar.tsx  Sidebar.tsx  sidebar.tsx
frontend/src/types/: index.ts
